--- a/frontend/src/components/listings/currentListing.css
+++ b/frontend/src/components/listings/currentListing.css
@@ -31,12 +31,10 @@
 }
 
 .right-content {
-    width: 35%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 10px;
-    flex: 1 1 30%; 
+    flex: 1 1 35%; 
 }
 
 .bookmark-icon {
@@ -288,10 +286,6 @@ hr {
         max-width: 100%;
     }
 
-    .right-content {
-        gap: 0px;
-    }
-
     .wrapper {
         padding-top: 0
     }
@@ -355,15 +349,15 @@ hr {
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
 
+    .content-container {
+        display: block;
+    }
+
     .main-content-container {
-        display: flex;
+        display: block;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-
-    .right-content {
-        margin: 0 auto;
     }
 
     .left-content .carousel-container {
@@ -399,22 +393,26 @@ hr {
 }
 
 @media screen and (min-width: 1024px) {
+
     .main-content-container {
-        max-width: 90%;
-        margin: 0 auto;
+        max-width: 80%;
     }
 
-    .content-container {
-        flex-direction: row;
+    .listing-header {
+        font-size: 2.5rem;
     }
 
     .right-content {
-        width: 35%;
         gap: 15px;
     }
 
-    .left-content {
-        width: 60%;
+    .listing-header {
+        font-weight: 800;
     }
+
+    .contact-share-buttons {
+        padding-top: 10px;
+    }
+
 }
 
